--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "mobile-test",
+  "name": "new",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "vercel-deploy": "next build && next export"
+    "lint": "next lint"
   },
   "dependencies": {
     "@types/node": "18.15.3",
